add published time
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@240 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/DOC/Templates/template.htm
+++ b/DOC/Templates/template.htm
@@ -21,8 +21,19 @@
   <body>
 	<a href="../index.html">Top</a>
 
+<div class="right">
+Author: mhayashi1120<br/>
+Published: TODO<br/>
+<i>powered by piki</i><br/>
+</div>
+
 $body
 
+<div class="right">
+Author: mhayashi1120<br/>
+Published: TODO<br/>
+<i>powered by piki</i><br/>
+</div>
 	<!-- Google Analytics -->
 	<script type="text/javascript">
 
