update adsense generated code
git-svn-id: svn+ssh://svn.sourceforge.jp/svnroot/fsvn/trunk@253 678b6a53-ec03-4e79-8c75-59ab63927749

--- a/DOC/Templates/template.htm
+++ b/DOC/Templates/template.htm
@@ -61,22 +61,14 @@ Published: TODO<br/>
 	  <!-- Google Adsense -->
 	  <script type="text/javascript">
 		<!--
-			google_ad_client="pub-8552692955110453";
-			google_ad_host="pub-9941151214016196";
-			google_alternate_color="FFFFFF";
-			google_ad_width=468;
-			google_ad_height=60;
-			google_ad_format="468x60_as";
-			google_ad_type="text_image";
-			google_color_border="003399";
-			google_color_bg="EEEEEE";
-			google_color_link="0000FF";
-			google_color_url="0000FF";
-			google_color_text="000000";
+			google_ad_client = "ca-pub-8552692955110453";
+			/* Emacs fsvn web page */
+			google_ad_slot = "5612233456";
+			google_ad_width = 468;
+			google_ad_height = 60;
 			//-->
 	  </script>
-	  <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-	  </script>
+	  <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 	</div>
 
   </body>
