--- a/DOC/WebWiki/howto/default.css
+++ b/DOC/WebWiki/howto/default.css
@@ -97,3 +97,42 @@ tr {
          text-align: right;
          padding-right: 16px;
          }
+
+
+
+.hanging h1 {
+     border-bottom: solid 1px blue;
+     padding: 0px 0px 0px 10px;
+     font-size: normal;
+     }
+
+.hanging h2 {
+     border-bottom: solid 1px blue;
+     padding: 0px 0px 0px 15px;
+     font-size: normal;
+     }
+
+.hanging h3 {
+     border-bottom: none;
+     font-weight: normal;
+     padding: 0px 0px 0px 20px;
+     font-size: normal;
+     }
+
+.hanging h4 {
+     font-weight: normal;
+     padding: 0px 0px 0px 25px;
+     font-size: normal;
+     }
+
+.hanging h5 {
+     font-weight: normal;
+     padding: 0px 0px 0px 28px;
+     font-size: normal;
+     }
+
+.hanging h6 {
+     font-weight: normal;
+     padding: 0px 0px 0px 30px;
+     font-size: normal;
+     }
